Fixed really dumb mistake
Header in ini file was commented...

--- a/CIBridge_VektorCrossbows/Config/XComStrategyTuning.ini
+++ b/CIBridge_VektorCrossbows/Config/XComStrategyTuning.ini
@@ -1,4 +1,4 @@
-; [CovertInfiltration.X2Helper_Infiltration_TemplateMod]
+[CovertInfiltration.X2Helper_Infiltration_TemplateMod]
 
 ; Make Single Build-------------------------
 +arrMakeItemBuildable="CrossbowVektor_MG"
