Update Bridge for Beta 3's new infil values and var names

--- a/CIBridge_VektorCrossbows/Config/XComInfiltration.ini
+++ b/CIBridge_VektorCrossbows/Config/XComInfiltration.ini
@@ -1,5 +1,5 @@
 [CovertInfiltration.X2InfiltrationMod]
 ; Add fewer hours to infiltration, but also have lower risk reduction than Vektor Rifles
-+InfilModifiers=(Item="CrossbowVektor_CV",   HoursAdded=6, RiskReductionPercent=0)
-+InfilModifiers=(Item="CrossbowVektor_MG",   HoursAdded=6, RiskReductionPercent=1)
-+InfilModifiers=(Item="CrossbowVektor_BM",   HoursAdded=6, RiskReductionPercent=2)
++InfilModifiers=(DataName="CrossbowVektor_CV",   InfilHoursAdded=-2, RiskReductionPercent=0)
++InfilModifiers=(DataName="CrossbowVektor_MG",   InfilHoursAdded=-2, RiskReductionPercent=1)
++InfilModifiers=(DataName="CrossbowVektor_BM",   InfilHoursAdded=-2, RiskReductionPercent=2)
