Add resale values & add infil times

--- a/CIBridge_VektorCrossbows/Config/XComStrategyTuning.ini
+++ b/CIBridge_VektorCrossbows/Config/XComStrategyTuning.ini
@@ -1,5 +1,9 @@
-[CovertInfiltration.X2Helper_Infiltration_TemplateMod]
+[PrototypeArmoury.PATemplateMods]
 
 ; Make Single Build-------------------------
-+arrMakeItemBuildable="CrossbowVektor_MG"
-+arrMakeItemBuildable="CrossbowVektor_BM"
++arrMakeItemBuildable=(ItemName="CrossbowVektor_MG")
++arrMakeItemBuildable=(ItemName="CrossbowVektor_BM")
+
+; Add Black Market resale values --------------
++arrTradingPostModifiers=(ItemName="CrossbowVektor_MG, NewValue=10)
++arrTradingPostModifiers=(ItemName="CrossbowVektor_BM, NewValue=27)
